--- a/FlickrViewer/Base.lproj/Main.storyboard
+++ b/FlickrViewer/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="14F1713" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="2pz-Hb-3bL">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
@@ -7,104 +7,7 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--Home View Controller-->
-        <scene sceneID="tne-QT-ifu">
-            <objects>
-                <viewController id="BYZ-38-t0r" customClass="DPRHomeViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Flickr Viewer" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="glb-4Z-BaN">
-                                <rect key="frame" x="-42" y="-21" width="42" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nTZ-0c-1jO">
-                                <rect key="frame" x="-23" y="-15" width="46" height="30"/>
-                                <color key="backgroundColor" red="0.36939340238783103" green="0.82618882769032065" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="30" id="83J-Xc-jSx">
-                                        <variation key="widthClass=compact" constant="60"/>
-                                    </constraint>
-                                </constraints>
-                                <state key="normal" title="Start">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <variation key="default">
-                                    <mask key="constraints">
-                                        <exclude reference="83J-Xc-jSx"/>
-                                    </mask>
-                                </variation>
-                                <variation key="widthClass=compact">
-                                    <mask key="constraints">
-                                        <include reference="83J-Xc-jSx"/>
-                                    </mask>
-                                </variation>
-                                <connections>
-                                    <segue destination="Qn4-9e-jip" kind="show" id="aaN-Cj-3Dy"/>
-                                </connections>
-                            </button>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="nTZ-0c-1jO" secondAttribute="bottom" constant="119" id="D88-15-Ba1">
-                                <variation key="widthClass=compact" constant="120"/>
-                            </constraint>
-                            <constraint firstItem="glb-4Z-BaN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="E4t-l3-WsJ">
-                                <variation key="widthClass=compact" constant="20"/>
-                            </constraint>
-                            <constraint firstItem="glb-4Z-BaN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Gsh-c4-kuc"/>
-                            <constraint firstItem="glb-4Z-BaN" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.7" id="X8r-i1-vVW"/>
-                            <constraint firstItem="nTZ-0c-1jO" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gN6-FK-epz"/>
-                            <constraint firstItem="nTZ-0c-1jO" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" multiplier="0.5" id="xdD-jm-jg1"/>
-                            <constraint firstItem="nTZ-0c-1jO" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="yDc-eb-d3W"/>
-                        </constraints>
-                        <variation key="default">
-                            <mask key="subviews">
-                                <exclude reference="glb-4Z-BaN"/>
-                                <exclude reference="nTZ-0c-1jO"/>
-                            </mask>
-                            <mask key="constraints">
-                                <exclude reference="D88-15-Ba1"/>
-                                <exclude reference="gN6-FK-epz"/>
-                                <exclude reference="xdD-jm-jg1"/>
-                                <exclude reference="yDc-eb-d3W"/>
-                                <exclude reference="E4t-l3-WsJ"/>
-                                <exclude reference="Gsh-c4-kuc"/>
-                                <exclude reference="X8r-i1-vVW"/>
-                            </mask>
-                        </variation>
-                        <variation key="widthClass=compact">
-                            <mask key="subviews">
-                                <include reference="glb-4Z-BaN"/>
-                                <include reference="nTZ-0c-1jO"/>
-                            </mask>
-                            <mask key="constraints">
-                                <include reference="D88-15-Ba1"/>
-                                <include reference="gN6-FK-epz"/>
-                                <include reference="xdD-jm-jg1"/>
-                                <exclude reference="yDc-eb-d3W"/>
-                                <include reference="E4t-l3-WsJ"/>
-                                <include reference="Gsh-c4-kuc"/>
-                                <include reference="X8r-i1-vVW"/>
-                            </mask>
-                        </variation>
-                    </view>
-                    <connections>
-                        <outlet property="startButton" destination="nTZ-0c-1jO" id="17o-Qy-Dpm"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="174" y="294"/>
-        </scene>
-        <!--Flickr Viewer-->
+        <!--Photo Reel-->
         <scene sceneID="x6h-Q4-vm1">
             <objects>
                 <collectionViewController id="rk8-cS-6Di" customClass="DPRCollectionViewController" sceneMemberID="viewController">
@@ -113,17 +16,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="0.39989265178566152" green="0.41739662247474751" blue="0.38541316017393346" alpha="1" colorSpace="calibratedRGB"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mSy-Bl-mEh">
-                            <size key="itemSize" width="100" height="100"/>
+                            <size key="itemSize" width="200" height="200"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="30" minY="60" maxX="30" maxY="20"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="photoCell" id="g5s-of-uj2" customClass="DPRPhotoCell">
-                                <rect key="frame" x="30" y="124" width="100" height="100"/>
+                                <rect key="frame" x="30" y="124" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 </view>
@@ -134,7 +37,7 @@
                             <outlet property="delegate" destination="rk8-cS-6Di" id="co6-XA-NAb"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" title="Flickr Viewer" id="qCI-5v-Iki"/>
+                    <navigationItem key="navigationItem" title="Photo Reel" id="qCI-5v-Iki"/>
                     <connections>
                         <outlet property="searchDisplayController" destination="k0r-YH-4Uw" id="GKC-dX-F4b"/>
                         <segue destination="2fB-hQ-8NL" kind="show" identifier="detailSegue" id="93p-jd-Jbn"/>
@@ -259,6 +162,7 @@
         <!--Navigation Controller-->
         <scene sceneID="n5R-uV-iZg">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5lB-Pe-H6A" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Qn4-9e-jip" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Esh-6N-e7N">
@@ -267,12 +171,53 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="rk8-cS-6Di" kind="relationship" relationship="rootViewController" id="DFz-Yf-oNc"/>
+                        <segue destination="rk8-cS-6Di" kind="relationship" relationship="rootViewController" id="0l3-Wx-a6J"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="5lB-Pe-H6A" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1044" y="294"/>
+            <point key="canvasLocation" x="24" y="294"/>
+        </scene>
+        <!--Flickr Viewer-->
+        <scene sceneID="snf-8n-q6w">
+            <objects>
+                <viewController id="2pz-Hb-3bL" customClass="DPRHomeViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="sTX-ZW-tle"/>
+                        <viewControllerLayoutGuide type="bottom" id="rb1-Qq-NHv"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5Df-xC-2TK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="f2x-9O-sbU">
+                                <rect key="frame" x="150" y="470" width="300" height="50"/>
+                                <color key="backgroundColor" red="0.36939340240000001" green="0.82618882770000002" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="Tgc-AK-dBG"/>
+                                </constraints>
+                                <state key="normal" title="Start">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="Qn4-9e-jip" kind="show" id="Bbh-gi-Gyo"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="rb1-Qq-NHv" firstAttribute="top" secondItem="f2x-9O-sbU" secondAttribute="bottom" constant="80" id="djh-Yn-QDe"/>
+                            <constraint firstItem="f2x-9O-sbU" firstAttribute="centerX" secondItem="5Df-xC-2TK" secondAttribute="centerX" id="qYP-sl-P68"/>
+                            <constraint firstItem="f2x-9O-sbU" firstAttribute="width" secondItem="5Df-xC-2TK" secondAttribute="width" multiplier="0.5" id="zcj-9P-Ux0"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Flickr Viewer" id="uWV-eg-UBp"/>
+                    <connections>
+                        <outlet property="startButton" destination="f2x-9O-sbU" id="KpX-Iw-tio"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tzO-K4-6Jh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="898" y="816"/>
         </scene>
     </scenes>
 </document>
